# web

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  find-prompt-tweet.py  get-requirements.py  get_requirements.py  listener.py  manual-emails.py  manual-prompt-tweet.py  manual_emails.py  oss.env  pyproject.toml  run-app.sh  run-flask.sh  run-gunicorn.sh  run-listener.py  run-listener.sh  wsgi.py
.github/: FUNDING.yml  dependabot.yml
config/: config.json
configuration/: default.json  development.json  production.json
db/: schema.sql  vss365today.db
docker/: Dockerfile  Dockerfile.twitter  docker-compose.yml  supervisord.conf
sql/: schema.sql
src/: app_factory.py  blueprints.py  configuration.py  extensions.py  main.py  middleware.py  models.py
src/blueprint/: __init__.py  admin.py  blueprint.py  main.py  root.py  search.py  shortcuts.py
src/core/: api.py  config.py  database.py  filters.py  form.py  forms.py  helpers.py  listener.py  subscription.py  tweets.py
src/core/api/: __init__.py  _api.py  v2.py
src/core/emails/: codetri_sender.py  generator.py  mailgun_sender.py  mailjet_sender.py  sender.py
src/core/filters/: __init__.py  date.py
src/static/: script.js  social-media-card.psd  style.css
src/static/js/: alerts.js  flash-messages.js  script.js  search.js
src/templates/: 404.html  500.html  about.html  base.html  browse-giver.html  browse-name.html  browse-writer.html  browse-year.html  browse.html  email.html  email.txt  new-email.html  subscribe.html  tweet.html  unsubscribe.html  word.html
src/templates/admin/: base.html  config.html  index.html
src/templates/email/: email.html  email.txt
src/templates/partials/: adsense.html  alerts.jinja2  analytics.html  btns-prev-next.html  calculate_cost.jinja2  flash-messages.jinja2  footer.html  form-search.html  form-subscribe.html  form-unsubscribe.html  form.html  (+6 more)
src/views/: feed.py  root.py  search.py  shortcuts.py  stats.py
stats/: hosts.sql  prompts.sql  website.sql  yearly-stats.py
(+29 files in other folders)
