[tool.poetry]
name = "vss365today-web"
version = "2.0.0"
description = "#vss365 today website"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
flask-wtf = "^1.1.1"
gunicorn = "^20.0.4"
requests = "^2.28.2"
email-validator = "^1.3.1"
sys-vars = "^5.0.0"
num2words = "^0.5.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2"
black = "^23.3"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
