[tool.poetry]
name = "vss365today-web"
version = "2.0.1"
description = "#vss365 today website"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
flask-wtf = "^1.1.1"
gunicorn = "^21.2.0"
email-validator = "^2.0.0"
sys-vars = "^5.0.0"
num2words = "^0.5.12"
httpx = "^0.25.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5"
black = "^23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true

[tool.isort]
profile = "black"
